# wato

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Caddyfile.dev  Caddyfile.prod  Dockerfile  LICENSE  README.md  Vagrantfile  config.h.in  docker-compose.yml  main.cpp  vcpkg-configuration.json  vcpkg.json  wato.sln  wato.vcxproj  wato.vcxproj.filters
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: build.yml  cflite_batch.yml  cflite_build.yml  cflite_cron.yml  cflite_pr.yml  cmake-multi-platform.yml
assets/: LICENSE.md
assets/models/: arrow.fbx  arrow_tower.fbx  mutant.fbx  phoenix.fbx  tower.fbx
cmake/: CompilerWarnings.cmake  Coverage.cmake
data/: gameplay.json
docs/: pathfinding.md
include/iconfonts/: IconsFontAwesome4.h_fontawesome-webfont.ttf.h
patches/: chrono-include-for-msvc.patch
scripts/: build.sh
shaders/: Makefile  fs_blinnphong.sc  fs_cubes.sc  fs_grid.sc  varying.def.sc  vs_blinnphong.sc  vs_blinnphong_instanced.sc  vs_blinnphong_skinned.sc  vs_cubes.sc  vs_grid.sc
src/: bgfx_utils.cpp  bgfx_utils.h  camera.cpp  grid.hpp  main.cpp  registry.cpp  registry.hpp
src/components/: animator.hpp  camera.hpp  color.hpp  connection.hpp  creep.hpp  creep_spawn.hpp  direction.hpp  game.hpp  health.hpp  imgui.hpp  light_source.hpp  map.hpp  model.hpp  model_rotation_offset.hpp  net.hpp  path.hpp  physics.hpp  placement_mode.hpp  player.hpp  position.hpp  predicted.hpp  projectile.hpp  rigid_body.hpp  rotation.hpp  scale.hpp  scene_object.hpp  spawner.hpp  tile.hpp  tower.hpp  tower_attack.hpp  transform3d.hpp  velocity.hpp
src/core/: action.hpp  cache.hpp  camera.cpp  camera.hpp  config.h  engine.hpp  event_handler.cpp  event_handler.hpp  game.cpp  game.hpp  game_engine.hpp  gameplay_definitions.hpp  graph.cpp  graph.hpp  hud.hpp  model_loader.cpp  model_loader.hpp  options.hpp  physics.cpp  physics.hpp  ray.cpp  ray.hpp  registry.cpp  registry.hpp  serialize.hpp  server_engine.hpp  snapshot.cpp  snapshot.hpp  state.hpp  sys.cpp  sys.hpp  tile.hpp  tower_building_handler.cpp  tower_building_handler.hpp  types.hpp  window.cpp  window.hpp
src/core/app/: app.cpp  app.hpp  game.cpp  game.hpp  game_client.cpp  game_client.hpp  game_server.cpp  game_server.hpp  server.cpp  server.hpp
src/core/crypto/: aead.cpp  aead.hpp  key.cpp  key.hpp  session.cpp  session.hpp
src/core/event/: creep_spawn.hpp  event.hpp
src/core/menu/: imgui_menu.cpp  imgui_menu.hpp  menu.hpp  menu_backend.hpp  menu_events.hpp  menu_state.hpp
src/core/net/: connection.hpp  enet_base.cpp  enet_base.hpp  enet_client.cpp  enet_client.hpp  enet_server.cpp  enet_server.hpp  http_client.cpp  http_client.hpp  http_client.hxx  net.hpp  network_events.hpp  pocketbase.cpp  pocketbase.hpp
src/core/physics/: event_handler.cpp  event_handler.hpp  physics.cpp  physics.hpp  physics_event_listener.cpp  physics_event_listener.hpp  physics_params.hpp
src/core/queue/: channel.hpp  ring_buffer.hpp
src/core/sys/: backtrace.cpp  (+6 more)
src/imgui/: imgui_helper.cpp  imgui_helper.h  imgui_hud.cpp  imgui_hud.hpp  imgui_menu.cpp  imgui_menu.hpp  imgui_user.h  makefile  wato_imgui_config.h
src/input/: action.cpp  action.hpp  input.cpp  input.h  input.hpp
src/primitive/: plane.hpp  primitive.hpp
src/registry/: game_registry.cpp  game_registry.hpp  registry.cpp  registry.hpp  server_registry.cpp  server_registry.hpp
src/renderer/: animation.hpp  asset.cpp  asset.hpp  bgfx_utils.cpp  bgfx_utils.hpp  blinn_phong_material.hpp  cache.hpp  cube.hpp  grid_preview_material.hpp  headless_renderer.hpp  instance_buffer.hpp  material.cpp  material.hpp  mesh_primitive.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  physics.hpp  plane.hpp  plane_primitive.hpp  primitive.hpp  render_types.hpp  renderer.cpp  renderer.hpp  renderer_concept.hpp  shader.hpp  skeleton.cpp  skeleton.hpp  vertex_layout.hpp
src/resource/: asset.cpp  cache.hpp  model_loader.cpp  model_loader.hpp  shader_loader.cpp  shader_loader.hpp  texture_loader.cpp  texture_loader.hpp
src/systems/: action.cpp  action.hpp  ai.cpp  ai.hpp  animation.cpp  animation.hpp  camera.cpp  collision.cpp  collision.hpp  creep.cpp  creep.hpp  economy.cpp  economy.hpp  health.cpp  health.hpp  imgui.cpp  input.cpp  input.hpp  network_response.cpp  network_response.hpp  physics.cpp  physics.hpp  projectile.cpp  projectile.hpp  render.cpp  render.hpp  rigid_bodies_update.cpp  rigid_bodies_update.hpp  sync.cpp  sync.hpp  system.hpp  system_executor.hpp  systems.hpp  tower_attack.cpp  tower_attack.hpp  tower_built.cpp  tower_built.hpp  ui.cpp  ui.hpp
src/watod/: CMakeLists.txt  Dockerfile  entrypoint.sh  main.cpp
test/: CMakeLists.txt  gen_corpus.py  main.cpp  main_fuzz.cpp  test.hpp  test_action.cpp  test_crypto.cpp  test_datadefs.cpp  test_economy.cpp  test_fixtures.hpp  test_graph.cpp  test_net.cpp  test_physics.cpp  test_ring_buffer.cpp  test_serialize.cpp  test_system.cpp  test_tower_building.cpp  test_types.cpp
test/testdata/: gameplay.json
vcpkg_overlay/glfw3/: portfile.cmake  vcpkg.json
vcpkg_overlay/reactphysics3d/: portfile.cmake
watohttpd/: Dockerfile  entrypoint.sh  game.go  go.mod  go.sum  main.go  matchmaking.go  register-local-cert.sh  squash-migrations.sh
watohttpd/migrations/: 1770488219_collections_snapshot.go  1770489924_updated_users.go  1770654736_updated_matchmaking_queue.go  1770655450_updated_matchmaking_queue.go  1770672164_created_game.go  1770672191_updated_users.go  1770672217_updated_matchmaking_queue.go  1770672434_updated_users.go  1770672596_updated_users.go  1770672657_updated_users.go  1770674719_updated_matchmaking_queue.go  1770674771_updated_matchmaking_queue.go  1770674788_updated_matchmaking_queue.go  1770675564_updated_matchmaking_queue.go  1771151626_updated_users.go  1771766201_updated_game.go  1771766319_updated_game.go  1771954161_created_game_servers.go  1771954356_updated_game_servers.go  1772006399_updated_game_servers.go  1772006426_updated_game_servers.go  1772702323_collections_snapshot.go
(+5 files in other folders)
